--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
 	<div id='app'></div>
-</body>
+<script type="text/javascript" src="javascripts/chat.min.js"></script></body>
 </html>
